--- a/nginx.conf
+++ b/nginx.conf
@@ -54,5 +54,6 @@ http {
   gzip_http_version 1.1;
   gzip_types text/plain text/css application/json application/x-javascript text/xml application/xml application/xml+rss text/javascript;
 
+  include /etc/nginx/resolver;
   include /etc/nginx/conf.d/*.conf;
 }
